Bugfix for kanban overflow

--- a/src/app/component/kanban/kanban-card/kanban-card.component.scss
+++ b/src/app/component/kanban/kanban-card/kanban-card.component.scss
@@ -4,6 +4,7 @@
   max-height: 160px;
   user-select: none;
   scroll-padding: 40px;
+  overflow: hidden;
 
   .kanban-card-container {
     overflow: hidden;
